Fix search bar on mobile devices when inside tabs
[MAILPOET-2775]

--- a/assets/css/src/components-plugin/_listing.scss
+++ b/assets/css/src/components-plugin/_listing.scss
@@ -52,3 +52,9 @@
     }
   }
 }
+
+.mailpoet-listing-mobile-search-holder {
+  @include respond-to(small-screen) {
+    height: 100px;
+  }
+}
